# scrlpp

./: CMakeLists.txt  todo.org
src/: main.cpp
src/alang/: env.cpp  env.hpp  error.cpp  error.hpp  eval.cpp  form.cpp  form.hpp  op.cpp  op.hpp  pos.cpp  pos.hpp  repl.cpp  stack.cpp  stack.hpp  task.hpp  type.cpp  type.hpp  types.hpp  util.hpp  val.cpp  val.hpp  vm.cpp  vm.hpp
src/alang/ops/: trace.cpp  trace.hpp
src/scrl/: env.cpp  env.hpp  error.cpp  error.hpp  eval.cpp  form.cpp  form.hpp  lib.cpp  lib.hpp  op.cpp  op.hpp  pos.cpp  pos.hpp  prim.cpp  prim.hpp  read.cpp  read.hpp  repl.cpp  stack.cpp  stack.hpp  task.hpp  type.cpp  type.hpp  types.hpp  util.hpp  val.cpp  val.hpp  vm.cpp  vm.hpp
src/scrl/forms/: id.cpp  id.hpp  lit.cpp  lit.hpp
src/scrl/libs/: abc.cpp  abc.hpp
src/scrl/ops/: prim_call.cpp  prim_call.hpp  push.cpp  push.hpp  stop.cpp  stop.hpp  trace.cpp  trace.hpp
src/scrl/types/: bool.cpp  bool.hpp  int.cpp  int.hpp  prim.cpp  prim.hpp  str.cpp  str.hpp
